--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Chat</title>
+    
     <script src="main.js", defer></script>
 </head>
 <body>
+    <div id="border_line_left" class="border_line">.</div>
+
     <div id="chatFrame">
         <h1>Chat</h1>
     </div>
-    <div>
+    <div id="line_to_write">
         <input type="text" id="inputChatLine" autofocus>
         <button id="submitButton">Submit</button>
     </div>
+
+    <div id="border_line_rigth" class="border_line">.</div>
         
 </body>
 </html>
